--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 :root {
   --dark-primary: #242424;
   --dark-secondary: #1a1a1a;
-  
+
   --green-primary: #40c762;
   --red-primary: #ed1543;
   --blue-primary: #28a0dd;
@@ -103,4 +103,15 @@ section {
 #correct {
   color: var(--blue-primary);
   font-size: 1rem;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
